<?xml version="1.0"?>
<package format="2">
  <name>ben_hardware</name>
  <version>0.0.0</version>
  <description>
    Launch files and configuration for BEN, the Bathymetric Explorer and Navigator.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cw4_helm</exec_depend>
  <exec_depend>ben_project11</exec_depend>
  <exec_depend>control_by_web_x4xx_interface</exec_depend>
  <exec_depend>kongsberg_em_control</exec_depend>
  <exec_depend>halo_radar</exec_depend>
  <exec_depend>mbr</exec_depend>
  <exec_depend>mru_transforms</exec_depend>
  <exec_depend>posmv</exec_depend>
  <exec_depend>project11</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>
</package>
